# well-actually-bot

./: Cargo.toml  Dockerfile  README.md
.github/: renovate.json
.github/workflows/: check_rust.yml  dependabot_automerge.yml
src/: main.rs
