[package]
name = "well-actually-bot"
version = "0.1.0"
authors = ["Michael Scherer <misc@redhat.com>"]
edition = "2018"
license = "GPL-3.0+"
license-file = "COPYING"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.14.1"
futures = "0.3.5"
tokio = "0.2.22"
regex = "1.3.9"
radix64 = "0.6.2"
