[package]
name = "well-actually-bot"
version = "0.1.0"
authors = ["Michael Scherer <misc@zarb.org>"]
edition = "2024"
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "*", default-features = false}
tokio = { version = "*", default-features = false, features = ["macros", "rt", "net"] }
regex = { version = "*", default-features = false}
irc = { version = "*", default-features = false, features = ["tls-rust"]}
radix64 = { version = "*", default-features = false}
